[project]
name = "upi-triage-openenv"
version = "1.0.0"
description = "OpenEnv environment for Indian UPI transaction triage"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.9.2",
    "openai>=1.51.0",
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/yuktabahuguna/upi-triage-openenv"
Repository = "https://github.com/yukta-bahuguna-05/upi-triage-openenv"