[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "upi-triage-openenv"
version = "1.0.0"
description = "OpenEnv environment for Indian UPI transaction triage"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.9.2",
    "openai>=1.51.0",
    "requests>=2.32.3",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/yuktabahuguna/upi-triage-openenv"
